updated signup page, context files ad stored token in sessionStorage

--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -44,6 +44,15 @@ body {
   border: #94b49f;
   border-radius: 18px;
 }
+.signup {
+  height: 86vh;
+}
+
+.signup > .row {
+  background-color: #b4cfb0;
+  border: #94b49f;
+  border-radius: 18px;
+}
 
 .row > h1 {
   background-color: #789395;
